[Version 1.3 Update]

Added:
- Added secure door types to some of the in-game doors. They can only be opened with an interaction by settlement members and do not automatically open when you walk into them