@@ -2,3 +2,6 @@
 
 Added:
 - Added secure door types to some of the in-game doors. They can only be opened with an interaction by settlement members and do not automatically open when you walk into them
+
+Fixed:
+- RequireOwnerOnline option will no longer make settlers invincible if there's a team member that's not the owner online
